--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -36,7 +36,7 @@
                 <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3"><span class="systems-selected-components">Selected Components</span></div>
             </div>
 
-            {% for component in elements %}
+            {% for component in system_elements %}
                 {# Each "component" is a Element model object. #}
                     <div id="tab-content" class="row row-control">
                         <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
@@ -56,12 +56,12 @@
                     {% csrf_token %}
                     <div id="" class="col-xs-7 col-sm-7 col-md-7 col-lg-7 col-xl-7">
                         <div class="form-group">
-                            <label for="compoment">Add component</label>&nbsp;&nbsp;
+                            <label for="component">Add component</label>&nbsp;&nbsp;
                             <!-- NOTE: Selection box converts to a Select2 selection box via script at bottom of page -->
                             <select class="producer_element_id" id="producer_element_id" name="producer_element_id" onchange="$(form).submit();" style="width:340px;">
                                 <option value="None" selected disabled hidden>Select a Component</option>
                                 {% for component in elements %}
-                                    {% if component not in system.producer_elements %}
+                                    {% if component not in system_elements %}
                                         <option value="{{ component.id }}">{{ component.name }}</option>
                                     {% endif %}
                                 {% endfor %}
