Handle Name Collisions when Editing a Component Name (#1307)
* View, Modal and Callbacks

* Implemented Requested Optimization

--- a/templates/components/element_detail_tabs.html
+++ b/templates/components/element_detail_tabs.html
@@ -475,8 +475,14 @@
               method: "POST",
               data: {name: newName,description: newDescription},
               keep_indicator_forever: true,
-              success: function() {
-                window.location.reload();
+              success: function(res) {
+                if(res["status"]=="ok"){
+                  hide_edit_component_modal();
+                  window.location.reload();
+                }
+                if(res["status"]=="err"){
+                  show_edit_component_modal_error(res["message"])
+                }
               }
             });
           });
