extra double quote in modal

--- a/templates/move-project-modal.html
+++ b/templates/move-project-modal.html
@@ -1,4 +1,4 @@
-<div id="move_project_modal" class="modal"">
+<div id="move_project_modal" class="modal">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
