The three failing tests had nothing to do with _login. tests apparently want nested login click anchor tag.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -83,7 +83,7 @@
           </li>
 
         {% elif LOGIN_ENABLED %}
-          <li><a href="{% url 'homepage' %}">Login</a></li>
+          <li><li><a href="{% url 'homepage' %}">Login</a></li></li>
         {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
