--- a/templates/org_groups/org_groups.html
+++ b/templates/org_groups/org_groups.html
@@ -64,7 +64,7 @@ Your Compliance Projects
 
   h1.mini {
     font-size: 16px;
-    font-family: Hind, sands-serif;
+    font-family: Hind, sans-serif;
     line-height: 22px;
     color: rgba(51, 51, 51);
     padding: 0px 0px 0px 0px;
