--- a/templates/project.html
+++ b/templates/project.html
@@ -312,12 +312,32 @@
 
   {% if enable_experimental_evidence %}
     <div class="row">
-      <div class="col-md-3"><div class="status-box"><h2 class="status">123 of {{ project.system.control_implementation_as_dict|length }}</h2> <span class="status-small">controls implemented</span></div></div>
-      <div class="col-md-3"><div class="status-box"><h2 class="status">4</h2> <span class="status-small">POA&Ms due soon</span></div></div>
-      <div class="col-md-3"><div class="status-box"><h2 class="status">{{ project.system.get_producer_elements|length }}</h2> <span class="status-small">system components</span></div></div>
-      <div class="col-md-3"><div class="status-box"><h2 class="piechart"></h2> <span class="status-small">overall compliance<span></div></div>
+      <div class="col-md-3">
+        <div class="status-box">
+          <h2 class="status">{{ controls_status_count.Implemented }} of {{ project.system.control_implementation_as_dict|length }}</h2>
+          <span class="status-small">controls implemented</span>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="status-box">
+          <h2 class="status">{{ project.system.get_producer_elements|length }}</h2>
+          <span class="status-small">system components</span>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="status-box">
+          <h2 class="status">{{ poam_status_count.Open }}</h2> <span class="status-small">open POA&Ms</span>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="status-box">
+          <h2 class="piechart" style="background-image: conic-gradient(#E1F8E2 {{ approx_compliance_degrees }}deg,
+                                                                       #B2E0B2 0 235deg);"> </h2>
+          <span class="status-small">{{ percent_compliant_100|floatformat:2 }}% compliance<span>
+        </div>
+      </div>
     </div>
-    <div style="text-align: right;"><a href="#">view more</a></div>
+    <!-- <div style="text-align: right;"><a href="#">view more</a></div> -->
     <!--
     <div class="row">
       <div class="col-md-12">
